# MoleculeLookup

./: README.md  pyproject.toml
moleculelookup/: __init__.py  cli.py  losses.py  main.py
moleculelookup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: mol_dataframe.pkl  test_moleculelookup.py
