[tool.poetry]
name = "MoleculeLookup"
version = "0.1.0"
description = ""
authors = ["Kelvin <kin.long.kelvin.lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
sklearn = "^0.0.0"
pandas = "^0.25.3"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
search_constants = "moleculelookup.cli:search_constants"
